<resources>
    <string name="app_name">Sam\'s Dino Quiz</string>
    <string name="false_button">False</string>
    <string name="true_button">True</string>
    <string name="prev_button">Prev</string>
    <string name="next_button">Next</string>
    <string name="correct_toast">This is correct</string>
    <string name="incorrect_toast">unfortunately, this is wrong</string>
    <string name="question_text">Are the birds nearest relatives to dinosaurs?</string>
    <string name="question_birds">Are the birds closest relatives to dinosaurs?</string>
    <string name="question_nessi">The last surviving dinosaur is the sea monster Nessi?</string>
    <string name="question_jurassic">The Jurassic Park is a sanctuary for dinosaurs?</string>
    <string name="question_vegi">all dinosaurs were vegetarians?</string>
    <string name="question_biggest">Rex was the largest dinosaur?</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_true_false">TrueFalse</string>
</resources>
